tests/files/invalid/unclosed_string.yumly
variable ;string = "this error should be origin from tokenizer